k8s/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:      
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-pvc
      containers:
      - name: mysql
        image: 'mysql:5.7'        
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-data
          mountPath: /etc/mysql/conf.d
