k8s/mvn-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mvn
  labels:
    app: mvn

spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: mvn
